kubernetes/Cluster-Int-Temp/deployments/source-control/gitea/service.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: gitea-ssh
    namespace: source-control
spec:
    selector:
        app: gitea
    type: LoadBalancer
    loadBalancerIP: ENC[AES256_GCM,data:oglsCjH/4sesebs=,iv:lbIRiBewhff7erY/GUJxme2iigs/PhIzJUOXph6oEhg=,tag:zwwenLJNGBUvqfiw814jqw==,type:str]
    ports:
        - name: ENC[AES256_GCM,data:FWhN,iv:w+5QF94bYT01ko4RzvIcVPUmn6HmRXvMpuI8iqTmc0Q=,tag:16YLhD/k5JLjWTGMl3SB9A==,type:str]
          port: ENC[AES256_GCM,data:sy8=,iv:FhaG62g8tBHlx2Why33DhVtMOZALLkd/htrGClR/ayg=,tag:FrbkOIkeN58FO99QA3eRHA==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEOFloVUtlNXF1cmh0dy90
[...]
            7n+BVx0DONCo7OSeJSWSBdPA+Hv6mucyXvYVtqvxxG8bhYNFAM7Vqw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-03T19:27:40Z"
    mac: ENC[AES256_GCM,data:i/1azI747ZaScIKxRITdnsV1pQMt65FCM1LHv/5nZnkxLSsOIKC8Wc8JVgrgpPs6fZKZANS6IrwzXjNcJSo3bB44ndhIErKCrsiRfLJUMlaHqRWnIdCtu3xf7++B/QOt6LbozToJBJ6pU+nC7JCduqyZ6ckZBDO/yi3wxnk7OSY=,iv:1zQwyR58lD4xLXCp1q99GHdvqcHIhK/KSx9atGVUUZc=,tag:HVjgK52NSQ5eAOnNwH5cQw==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks)$
    version: 3.8.1
---
apiVersion: v1
kind: Service
metadata:
    name: gitea-web
    namespace: source-control
spec:
    selector:
        app: gitea
    ports:
        - name: ENC[AES256_GCM,data:MLSlzQ==,iv:YuHvKIEeBmg7DMaOGeJSne4ZsSpGl3zKrBkmYlEGCTs=,tag:KiKrF2SnZEjrFSgdbCpnqw==,type:str]
          port: ENC[AES256_GCM,data:zLEHqg==,iv:qk9Z72iDmnH80ECuMtS9cigaCXJMVf/dR2Mu2JIa9iE=,tag://dx2APLAzc9+aHqTUal0w==,type:int]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEOFloVUtlNXF1cmh0dy90
[...]
            7n+BVx0DONCo7OSeJSWSBdPA+Hv6mucyXvYVtqvxxG8bhYNFAM7Vqw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-03T19:27:40Z"
    mac: ENC[AES256_GCM,data:i/1azI747ZaScIKxRITdnsV1pQMt65FCM1LHv/5nZnkxLSsOIKC8Wc8JVgrgpPs6fZKZANS6IrwzXjNcJSo3bB44ndhIErKCrsiRfLJUMlaHqRWnIdCtu3xf7++B/QOt6LbozToJBJ6pU+nC7JCduqyZ6ckZBDO/yi3wxnk7OSY=,iv:1zQwyR58lD4xLXCp1q99GHdvqcHIhK/KSx9atGVUUZc=,tag:HVjgK52NSQ5eAOnNwH5cQw==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks)$
    version: 3.8.1
