kubernetes/Cluster-Int-Temp/deployments/source-control/gitea/ingress.sops.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: gitea-ingress
    namespace: source-control
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:+3dV/ec1xz4I722rarQluQ2jqYtBXxM=,iv:TXgPpH+4qNn0mZbO4pmUsL6lWFVOvnBakObtk6/xpHs=,tag:aS9hBJP7uUto0Lo/AtRtWQ==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:qIogRtSJtvVo,iv:iqtd0Q9H6z1bfWSEwmDCQ/xieeZbvHzhXBbLLEL0RUM=,tag:3BeoNIsDd/TcX7bzTJUgMA==,type:str]
              namespace: ENC[AES256_GCM,data:T8LaXq2JloUmN8+8mOs=,iv:cz/m7U8IGZQEd/rtK0HvqAQECkvyN1zuGKM5Z9ASWes=,tag:dINDR2et2OirUb5cJmsxUg==,type:str]
              port: ENC[AES256_GCM,data:AggwlA==,iv:UISr3cakJQO6jdK/E2QD/wqUO5rkKAQyD4VAyG+vWdw=,tag:iBTraZ9isIOF3DzHWIghGg==,type:int]
        - match: ENC[AES256_GCM,data:55QJ0X7CUTm+kmXc4E4bnbu/Nw==,iv:Rpbjh/3eNy9N4Ue6B8h6wEkKV+T9Jw5sVtdFsSOuPIg=,tag:s95xJspjMt8httBZA1wlKg==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:SJYL3V+MbUqT,iv:/6AMhjfw4uP66r47JaIIQ3QK78GCuTVWIzxJ3Qw6aXA=,tag:Ic9hXf/xP4Vn4MBi8p8kkw==,type:str]
              namespace: ENC[AES256_GCM,data:TBzgA/SEcvK3M4DwfSg=,iv:e78oLqlZyu9g+gdvA11zHtUasc6xWiiS7gH3kLcHADo=,tag:UWG4tceyKHV39XQhKLwxzg==,type:str]
              port: ENC[AES256_GCM,data:SXjjRg==,iv:ccW82fjmiDsVzQrqSgTvIsNCZp2VtlPrlxgZGM/gkmM=,tag:CKajJ7P05Nchk06uuCqTag==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:lkQ4bM9qmx0LRJk=,iv:iV2KV6L///MUYCefxBRbAan+nEOX8ypgxGtre8AWINk=,tag:46rfGHzd7vJg9WqtxkNf2Q==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0TDZCc01za1krbEp6WVo4
[...]
            FMhMWHYhZ+m4S3lxBCjDdAS2j1F6heYSgdIso4YlLP1ZjclqN9FnWQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-03T20:26:04Z"
    mac: ENC[AES256_GCM,data:hTlwp5f4nBdye+a7SvIFBvbRfmJshWP3ujJvfptopevp9s5lIfx5WNxrPdiC5i/Jc3NYjlEjk1X9Pu4vJAwwVQSP5hoxuJh/yiwFx01uNRNDD71H4ycGq60pxu7LQH/xCkQQNeo0Hdf4Ic9jzJxgRw6ZMBc3lNfkuayMj8z2Z9U=,iv:JYUy3IQzM9zQO6YDQCZoMG95OcG9vRo+8guUcdUQSFQ=,tag:GlSUX5pFrzYp5azfbGSImA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks)$
    version: 3.8.1
